@@ -3,14 +3,16 @@ package ir.dotin.loan.morabehe.core.domain.disbursement.service;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
-import ir.dotin.loan.morabehe.core.domain.disbursement.strategy.*;
 import ir.dotin.platform.domain.common.Notification;
 import ir.dotin.platform.domain.common.Result;
 import ir.dotin.platform.domain.common.annotation.DomainService;
+import ir.dotin.loan.baseloan.core.domain.loanfacility.aggregate.AbstractLoanApplication;
 import ir.dotin.loan.baseloan.core.domain.loanfacility.enums.FacilityStatus;
+import ir.dotin.loan.baseloan.core.domain.loanfacility.vo.ApplicationNumber;
 import ir.dotin.loan.baseloan.core.domain.shared.interaction.ExternalTransactionPostingClient;
 import ir.dotin.loan.baseloan.core.domain.shared.interaction.LoanTopicResolver;
 import ir.dotin.loan.baseloan.core.domain.shared.service.transaction.TransactionFactory;
@@ -21,6 +23,7 @@ import ir.dotin.loan.baseloan.core.domain.shared.vo.LoanTopic;
 import ir.dotin.loan.baseloan.core.domain.shared.vo.transaction.LoanTransaction;
 import ir.dotin.loan.baseloan.core.domain.shared.vo.transaction.PostTitle;
 import ir.dotin.loan.baseloan.core.domain.shared.vo.transaction.TransactionNumber;
+import ir.dotin.loan.morabehe.core.domain.disbursement.strategy.*;
 import ir.dotin.loan.morabehe.core.domain.loanfacility.aggregate.MorabeheLoanFacility;
 import ir.dotin.loan.morabehe.core.domain.loanfacility.i18n.MorabeheLoanFacilityLocalizedMessageCodes;
 
@@ -48,19 +51,19 @@ public final class MorabeheDisbursementTransactionService {
 
         Result<Void> validationResult = validateFacilityForDisbursement(facility);
         if (validationResult.isFailure()) {
-            return Result.ofNotification(validationResult.notification());
+            return Result.failure(validationResult.notification());
         }
 
         try {
             Result<CalculationContext<MorabeheLoanFacility>> contextResult = prepareCalculationContext(facility);
             if (contextResult.isFailure()) {
-                return Result.ofNotification(contextResult.notification());
+                return Result.failure(contextResult.notification());
             }
 
             List<DocumentCalculationStrategy<MorabeheLoanFacility>> applicableStrategies =
                     strategyProvider.getStrategies(facility);
             if (applicableStrategies.isEmpty()) {
-                return Result.ofValue(Collections.emptyList());
+                return Result.success(Collections.emptyList());
             }
 
             List<CompletableFuture<Result<TransactionData>>> transactionFutures = applicableStrategies.stream()
@@ -72,19 +75,19 @@ public final class MorabeheDisbursementTransactionService {
                             transactionFutures.toArray(new CompletableFuture[0]))
                     .thenApply(v -> transactionFutures.stream()
                             .map(CompletableFuture::join)
-                            .collect(Collectors.toList()));
+                            .toList());
 
             List<Result<TransactionData>> transactionResults = allTransactionsFuture.join();
 
-            Notification accumulatedNotification = Notification.empty();
+            Notification accumulatedNotification = Notification.create();
             for (Result<TransactionData> result : transactionResults) {
                 if (result.isFailure()) {
-                    accumulatedNotification = accumulatedNotification.merge(result.notification());
+                    accumulatedNotification.merge(result.notification());
                 }
             }
 
             if (!accumulatedNotification.isEmpty()) {
-                return Result.ofNotification(accumulatedNotification);
+                return Result.failure(accumulatedNotification);
             }
 
             List<TransactionData> validTransactions = transactionResults.stream()
@@ -92,12 +95,12 @@ public final class MorabeheDisbursementTransactionService {
                     .map(Result::value)
                     .filter(data -> data != null
                             && data.transaction != null
-                            && !data.transaction.documents().isEmpty()
-                            && !data.transaction.documents().getFirst().articles().isEmpty())
+                            && data.transaction.document() != null
+                            && !data.transaction.document().articles().isEmpty())
                     .toList();
 
             if (validTransactions.isEmpty()) {
-                return Result.ofValue(Collections.emptyList());
+                return Result.success(Collections.emptyList());
             }
 
             List<CompletableFuture<Result<TransactionNumber>>> postingFutures = validTransactions.stream()
@@ -111,76 +114,107 @@ public final class MorabeheDisbursementTransactionService {
 
             List<Result<TransactionNumber>> postingResults = allPostingsFuture.join();
 
-            accumulatedNotification = Notification.empty();
+            accumulatedNotification = Notification.create();
             for (int i = 0; i < postingResults.size(); i++) {
                 Result<TransactionNumber> result = postingResults.get(i);
                 if (result.isFailure()) {
                     TransactionData data = validTransactions.get(i);
-                    accumulatedNotification = accumulatedNotification.merge(result.notification());
+                    accumulatedNotification.merge(result.notification());
                     accumulatedNotification.addError(
                             MorabeheLoanFacilityLocalizedMessageCodes.TRANSACTION_POSTING_FAILED, data.purposeCode);
                 }
             }
 
             if (!accumulatedNotification.isEmpty()) {
-                return Result.ofNotification(accumulatedNotification);
+                return Result.failure(accumulatedNotification);
             }
 
             List<TransactionNumber> transactionNumbers = postingResults.stream()
                     .filter(Result::isSuccess)
                     .map(Result::value)
-                    .collect(Collectors.toList());
+                    .toList();
 
-            return Result.ofValue(transactionNumbers);
+            return Result.success(transactionNumbers);
         } catch (Exception e) {
-            Notification notification = Notification.empty()
+            Notification notification = Notification.create()
                     .addError(MorabeheLoanFacilityLocalizedMessageCodes.UNEXPECTED_ERROR, e.getMessage());
-            return Result.ofNotification(notification);
+            return Result.failure(notification);
         }
     }
 
     private Result<Void> validateFacilityForDisbursement(MorabeheLoanFacility facility) {
-        Notification notification = Notification.empty();
+        Notification notification = Notification.create();
         FacilityStatus currentState = facility.getCurrentState();
 
         if (currentState != FacilityStatus.PENDING_DISBURSEMENT) {
             notification = notification.addError(
                     MorabeheLoanFacilityLocalizedMessageCodes.CANNOT_POST_DISBURSE_TRANSACTION, currentState.name());
-            return Result.ofNotification(notification);
+            return Result.failure(notification);
         }
 
-        return Result.empty();
+        return Result.success();
     }
 
     private Result<CalculationContext<MorabeheLoanFacility>> prepareCalculationContext(MorabeheLoanFacility facility) {
-        Notification notification = Notification.empty();
+        Objects.requireNonNull(facility, "MorabeheLoanFacility cannot be null for preparing CalculationContext.");
+        Notification accumulatedNotification = Notification.create();
 
-        EconomicSector economicSector = facility.getLoanApplication().getEconomicSector();
+        // 1. Resolve LoanTopic
+        AbstractLoanApplication<?, ?> loanApplication = facility.getLoanApplication();
+        if (loanApplication == null) {
+            accumulatedNotification = accumulatedNotification.addError(
+                    MorabeheLoanFacilityLocalizedMessageCodes.CALCULATION_CONTEXT_LOAN_APPLICATION_MISSING_IN_FACILITY);
+            return Result.failure(accumulatedNotification);
+        }
+
+        EconomicSector economicSector = loanApplication.getEconomicSector();
+        if (economicSector == null) {
+            accumulatedNotification = accumulatedNotification.addError(
+                    MorabeheLoanFacilityLocalizedMessageCodes.CALCULATION_CONTEXT_ECONOMIC_SECTOR_MISSING);
+            return Result.failure(accumulatedNotification);
+        }
+
         LoanTopicResolver.Input resolverInput = new LoanTopicResolver.Input(facility.loanTypeId(), economicSector);
         Result<LoanTopic> topicResult = loanTopicResolver.resolvePrimaryTopic(resolverInput);
 
         if (topicResult.isFailure()) {
-            notification = notification.merge(topicResult.notification());
-            notification.addError(
+            accumulatedNotification.merge(topicResult.notification());
+            accumulatedNotification = accumulatedNotification.addError(
                     MorabeheLoanFacilityLocalizedMessageCodes.LOAN_TOPIC_RESOLUTION_FAILED,
-                    facility.loanTypeId(),
-                    economicSector);
-            return Result.ofNotification(notification);
+                    facility.loanTypeId().toString(),
+                    economicSector.toString());
+            return Result.failure(accumulatedNotification);
         }
-        PostTitle postTitle = new PostTitle(facility.getLoanApplication()
-                .getApplicationNumber()
-                .orElseThrow()
-                .value()); // TODO
+        LoanTopic primaryLoanTopic = topicResult.value();
 
-        try {
-            CalculationContext<MorabeheLoanFacility> context =
-                    CalculationContext.of(facility, topicResult.value(), postTitle);
-
-            return Result.ofValue(context);
-        } catch (IllegalStateException e) {
-            notification.addError(MorabeheLoanFacilityLocalizedMessageCodes.UNEXPECTED_ERROR, e.getMessage());
-            return Result.ofNotification(notification);
+        // 2. Prepare PostTitle
+        Optional<ApplicationNumber> appNumberOpt = loanApplication.getApplicationNumber();
+        if (appNumberOpt.isEmpty()) {
+            accumulatedNotification = accumulatedNotification.addError(
+                    MorabeheLoanFacilityLocalizedMessageCodes.CALCULATION_CONTEXT_APPLICATION_NUMBER_MISSING);
+            return Result.failure(accumulatedNotification);
         }
+        ApplicationNumber applicationNumber = appNumberOpt.orElseThrow();
+
+        Result<PostTitle> postTitleResult = PostTitle.of(applicationNumber.derivedValue());
+        if (postTitleResult.isFailure()) {
+            accumulatedNotification.merge(postTitleResult.notification());
+            accumulatedNotification = accumulatedNotification.addError(
+                    MorabeheLoanFacilityLocalizedMessageCodes.CALCULATION_CONTEXT_POST_TITLE_CREATION_FAILED,
+                    applicationNumber.derivedValue());
+            return Result.failure(accumulatedNotification);
+        }
+        PostTitle postTitle = postTitleResult.value();
+
+        Result<CalculationContext<MorabeheLoanFacility>> contextResult =
+                CalculationContext.of(facility, primaryLoanTopic, postTitle);
+
+        if (contextResult.isFailure()) {
+            accumulatedNotification = accumulatedNotification.merge(contextResult.notification());
+            return Result.failure(accumulatedNotification);
+        }
+
+        return contextResult;
     }
 
     private record TransactionData(LoanTransaction transaction, String purposeCode) {}
@@ -193,21 +227,21 @@ public final class MorabeheDisbursementTransactionService {
                 transactionFactory.createTransaction(context, strategy, "postTitle");
 
         if (transactionResult.isFailure()) {
-            return Result.ofNotification(transactionResult.notification());
+            return Result.failure(transactionResult.notification());
         }
 
         LoanTransaction transaction = transactionResult.value();
 
         String purposeCode = determinePurposeCode(strategy);
         if (purposeCode == null) {
-            Notification notification = Notification.empty()
+            Notification notification = Notification.create()
                     .addError(
                             MorabeheLoanFacilityLocalizedMessageCodes.UNKNOWN_STRATEGY_TYPE,
                             strategy.getClass().getName());
-            return Result.ofNotification(notification);
+            return Result.failure(notification);
         }
 
-        return Result.ofValue(new TransactionData(transaction, purposeCode));
+        return Result.success(new TransactionData(transaction, purposeCode));
     }
 
     private Result<TransactionNumber> postTransaction(TransactionData data) {
